// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskDetails integration test should change the data after reload: initial state 1`] = `
Object {
  "taskDetails": Object {
    "isData": true,
    "label": "new-label-unchanged",
    "state": "stopped",
    "status": "RESOLVED",
    "taskReload": false,
    "timeoutId": null,
  },
}
`;

exports[`TaskDetails integration test should change the data after reload: task details data should change 1`] = `
Object {
  "taskDetails": Object {
    "isData": true,
    "label": "new-label-changed",
    "state": "stopped",
    "status": "RESOLVED",
    "taskReload": false,
    "timeoutId": null,
  },
}
`;

exports[`TaskDetails integration test should flow: initial state 1`] = `
Object {
  "taskDetails": Object {
    "isData": false,
    "status": "PENDING",
  },
}
`;

exports[`TaskDetails integration test should flow: task details reload start 1`] = `
Array [
  Array [
    Object {
      "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "label": "new-label",
        "state": "stopped",
      },
      "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_SUCCESS",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "timeoutId": 3,
      },
      "type": "FOREMAN_TASK_DETAILS_START_POLLING",
    },
  ],
]
`;

exports[`TaskDetails integration test should flow: task details reload stop after reload button click 1`] = `
Array [
  Array [
    Object {
      "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "label": "new-label",
        "state": "stopped",
      },
      "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_SUCCESS",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "timeoutId": 3,
      },
      "type": "FOREMAN_TASK_DETAILS_START_POLLING",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "timeoutId": 3,
      },
      "type": "FOREMAN_TASK_DETAILS_STOP_POLLING",
    },
  ],
]
`;
